<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/reset_pwd_cencel"
        style="@style/textstyle_blue"
        android:layout_marginLeft="@dimen/margin_left_16dp"
        android:text="@string/back" />

    <TextView
        android:id="@+id/reset_pwd_title"
        style="@style/text_style_small"
        android:layout_centerHorizontal="true"
        android:text="@string/reset_password" />

    <TextView
        android:id="@+id/reset_your_pwd"
        style="@style/text_style_black"
        android:layout_below="@+id/reset_pwd_title"
        android:layout_centerHorizontal="true"
        android:text="@string/reset_your_password" />

    <EditText
        android:id="@+id/input_pwd_first"
        style="@style/edittext_style"
        android:inputType="textPassword"
        android:layout_below="@+id/reset_your_pwd"
        android:maxLength="12"
        android:hint="@string/password" />

    <EditText
        android:id="@+id/input_your_pwd_again"
        style="@style/edittext_style"
        android:inputType="textPassword"
        android:layout_below="@+id/input_pwd_first"
        android:maxLength="12"
        android:hint="@string/confirm_password" />

    <Button
        android:id="@+id/reset_pwd_btn"
        style="@style/button_style"
        android:layout_below="@+id/input_your_pwd_again"
        android:text="@string/reset_password" />
</RelativeLayout>