<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/fast_registered"
        style="@style/textstyle_blue"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/margin_right_16dp"
        android:text="@string/fast_registered" />


    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fast_registered"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/ic_app_logo" />

    <TextView
        android:id="@+id/login_akm_doctor"
        style="@style/text_style_black"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:text="@string/login_app" />

    <EditText
        android:id="@+id/register_input_mobile"
        style="@style/edittext_style"
        android:layout_below="@+id/login_akm_doctor"
        android:hint="@string/input_mobile_number"
        android:inputType="number" />

    <EditText
        android:id="@+id/login_pwd"
        style="@style/edittext_style"
        android:layout_below="@+id/register_input_mobile"
        android:hint="@string/password"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/login_btn"
        style="@style/button_style"
        android:layout_below="@+id/login_pwd"
        android:text="@string/login" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_top_8dp"
        android:text="@string/forgot_password"
        android:textColor="@color/app_main_color"
        android:textSize="@dimen/font_size_14sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="如需帮助，请拨打热线400-671-8821"
            android:textColor="@color/app_main_color" />


    </LinearLayout>

</RelativeLayout>