<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/layout_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:paddingTop="@dimen/padding_top_8dp">

        <TextView
            android:id="@+id/check_in_reward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invite_patient"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/font_size_20sp" />

        <TextView
            android:id="@+id/friend_reward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_8dp"
            android:text="@string/invite_doctor"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/font_size_20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_16dp"
            android:background="@drawable/gray_frame_bg"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/padding_16dp">

            <TextView
                android:id="@+id/share_qr_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qs_code_share" />

            <ImageView
                android:id="@+id/qr_code"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="@dimen/margin_top_8dp"
                android:scaleType="fitXY"
                android:src="@mipmap/ic_code" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/my_head_image"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginTop="@dimen/margin_top_8dp"
                android:src="@mipmap/ic_default_doctor" />

            <TextView
                android:id="@+id/my_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_8dp"
                android:textColor="@color/text_color_black"
                android:textSize="@dimen/font_size_16sp" />

            <TextView
                android:id="@+id/my_hospital"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/edit_content"
                android:textSize="@dimen/font_size_14sp" />

        </LinearLayout>

        <cn.zsmy.akm.doctor.widget.DrawableCenterButton
            android:id="@+id/share_my_qr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_top_16dp"
            android:background="@drawable/selector_general_button"
            android:drawableLeft="@mipmap/ic_share"
            android:gravity="fill_vertical"
            android:text="@string/share"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_18sp" />

    </LinearLayout>


</LinearLayout>