<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical">

    <include layout="@layout/layout_toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="@dimen/padding_16dp">

        <TextView
            android:id="@+id/message_notification"
            style="@style/font_style_black"
            android:text="@string/message_notification" />

        <RadioGroup
            android:id="@+id/inquiry_notice_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/inquiry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableLeft="@drawable/drug_user_type"
                android:text="@string/allow" />

            <RadioButton
                android:id="@+id/not_inquiry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableLeft="@drawable/drug_user_type"
                android:text="@string/not_allow" />

        </RadioGroup>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/push_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_16dp"
        android:background="@color/white"
        android:padding="@dimen/padding_16dp">

        <TextView
            style="@style/font_style_black"
            android:text="推送设置" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/action_row" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="13dp"
        android:background="@color/widgets_general_row_line"/>

    <RelativeLayout
        android:id="@+id/sign_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="@dimen/padding_16dp">

        <TextView
            style="@style/font_style_black"
            android:text="退出登录" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/action_row" />
    </RelativeLayout>


</LinearLayout>