<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
    >

    <include layout="@layout/layout_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/padding_left_16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/publish_title"
                    android:textColor="@color/app_main_color"
                    android:textSize="@dimen/font_size_18sp" />

                <EditText
                    android:id="@+id/post_title_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="请输入标题  "
                    android:textColor="@color/app_main_color" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/list_divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/padding_16dp">

                <TextView
                    style="@style/font_style_black"
                    android:text="@string/content" />

                <EditText
                    android:id="@+id/post_content_edt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="top"
                    android:hint="请输入正文"
                    android:minLines="4"
                    android:textColor="@color/text_color_black"
                    android:textSize="@dimen/font_size_18sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/list_divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="@dimen/padding_16dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/font_style_black"
                        android:text="@string/photo" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_left_8dp"
                        android:text="@string/photo_remind" />
                </LinearLayout>

                <GridView
                    android:id="@+id/noScrollgridview"
                    android:layout_width="match_parent"
                    android:layout_height="185dp"
                    android:layout_marginTop="@dimen/margin_top_8dp"
                    android:horizontalSpacing="8dp"
                    android:numColumns="4"
                    android:scrollbars="none"
                    android:verticalSpacing="5dp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>


    <!--                       -->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/features_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/photograph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_camera"
                android:layout_marginLeft="@dimen/margin_left_16dp"/>

            <ImageView
                android:id="@+id/gallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/photograph"
                android:layout_marginLeft="@dimen/margin_left_16dp"
                android:src="@mipmap/ic_gallery" />

            <cn.zsmy.akm.doctor.widget.DrawableCenterTextView
                android:id="@+id/choose_plate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="选择板块"
                android:drawableLeft="@drawable/ic_choose_area"
                android:textColor="@color/text_color_black"
                android:layout_toLeftOf="@+id/case_choose_rb"
                android:gravity="fill_vertical"
                android:textSize="@dimen/font_size_14sp" />


            <CheckBox
                android:id="@+id/case_choose_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:layout_alignParentRight="true"
                android:layout_marginRight="12dp"
                android:drawableLeft="@drawable/checkbox_case"
                android:gravity="center_vertical"
                android:text="@string/Case"
                android:textSize="@dimen/font_size_14sp" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>